# KVecDB

./: Cargo.toml  LICENSE  README.md  test.cc
src/: logger.rs  main.rs  storage.rs  vecindex.rs  webserver.rs
src/vecindex/: faiss_index.rs  usearch_index.rs
